--- a/УПИС_Задание__№8.ipynb
+++ b/УПИС_Задание__№8.ipynb
@@ -150,14 +150,14 @@
     "| **Тип** | Позитивный, Функциональный |\n",
     "| **Связь с требованиями** | ФТ-007 |\n",
     "\n",
-    "**Предусловия:** Активная партия. Игрок владеет зданием, эффект которого срабатывает при значении \"6\" на кубике и дает 3 Монеты.\n",
+    "**Предусловия:** Активная партия. Игрок владеет зданием, эффект которого срабатывает при значении \"11\" на кубике и дает 3 Монеты.\n",
     "\n",
     "**Шаги выполнения:**\n",
     "\n",
     "| № | Действие | Ожидаемый результат |\n",
     "|---|----------|---------------------|\n",
     "| 1 | Зафиксировать начальное количество Монет (M_start). | M_start записано. |\n",
-    "| 2 | Бросить кубик, дождавшись выпадения \"6\" (или смоделировать). | Происходит этап 3 хода. Проверить конечное количество Монет (M_end). M_end должно быть равно M_start + 3. |\n",
+    "| 2 | Бросить кубик, дождавшись выпадения \"11\" (или смоделировать). | Происходит этап 3 хода. Проверить конечное количество Монет (M_end). M_end должно быть равно M_start + 3. |\n",
     "| 3 | Бросить кубик, дождавшись выпадения значения, на которое не срабатывает эффект. | Монеты не должны начисляться. |\n",
     "\n",
     "### TC-CARD-002: Построить здание с карты (позитивный сценарий)\n",
@@ -170,14 +170,14 @@
     "| **Тип** | Позитивный, Функциональный |\n",
     "| **Связь с требованиями** | ФТ-004 |\n",
     "\n",
-    "**Предусловия:** У игрока есть Карта здания стоимостью 8 Монет, 10 Монет и доступна собственная клетка местности с подходящим типом местности.\n",
+    "**Предусловия:** У игрока есть Карта здания стоимостью 4 Монет, 5 Монет и доступна собственная клетка местности с подходящим типом местности.\n",
     "\n",
     "**Шаги выполнения:**\n",
     "\n",
     "| № | Действие | Ожидаемый результат |\n",
     "|---|----------|---------------------|\n",
-    "| 1 | Выбрать карту здания стоимостью 8 Монет. | Карта подсвечивается как доступная. |\n",
-    "| 2 | Перетащить карту на соответствующую клетку местности. | Здание строится. Монеты уменьшаются на 8. Карта сбрасывается. На клетке появляется спрайт нового здания. |\n",
+    "| 1 | Выбрать карту здания стоимостью 4 Монет. | Карта подсвечивается как доступная. |\n",
+    "| 2 | Перетащить карту на соответствующую клетку местности. | Здание строится. Монеты уменьшаются на 4. Карта сбрасывается. На клетке появляется спрайт нового здания. |\n",
     "\n",
     "### TC-CARD-003: Негативный тест: Построить здание без Монет\n",
     "\n",
@@ -189,13 +189,13 @@
     "| **Тип** | Негативный, Функциональный |\n",
     "| **Связь с требованиями** | ФТ-004 |\n",
     "\n",
-    "**Предусловия:** У игрока есть карта здания стоимостью 10 Монет, но в наличии только 5 Монет.\n",
+    "**Предусловия:** У игрока есть карта здания стоимостью 5 Монет, но в наличии только 4 Монеты.\n",
     "\n",
     "**Шаги выполнения:**\n",
     "\n",
     "| № | Действие | Ожидаемый результат |\n",
     "|---|----------|---------------------|\n",
-    "| 1 | Выбрать карту стоимостью 10 Монет. | Карта неактивна (затемнена). |\n",
+    "| 1 | Выбрать карту стоимостью 4 Монет. | Карта неактивна (затемнена). |\n",
     "| 2 | Попытаться перетащить или нажать на карту для постройки. | Появляется сообщение: \"Недостаточно Монет\" (или другой индикатор). Карта остается в руке, ресурсы не списываются. |\n",
     "\n",
     "### TC-CARD-004: Корректный сброс/замена карты\n",
@@ -440,33 +440,32 @@
     "| **Тип** | Юзабилити |\n",
     "| **Связь с требованиями** | НФТ-Ю-001 |\n",
     "\n",
-    "**Предусловия:** Партия, в которой участвует 10 новых игроков, не знакомых с игрой.\n",
+    "**Предусловия:** Партия, в которой участвует 4 новых игроков, не знакомых с игрой.\n",
     "\n",
     "**Шаги выполнения:**\n",
     "\n",
     "| № | Действие | Ожидаемый результат |\n",
     "|---|----------|---------------------|\n",
-    "| 1 | Попросить новых игроков начать партию, не читая инструкцию. | Игроки совершают ход (бросок кубиков и использование хотя бы одной карты/действия) на основе интуиции. |\n",
-    "| 2 | Зафиксировать количество игроков, совершивших базовый ход. | 90% игроков должны совершить базовый ход без необходимости обращаться к инструкциям или обучению. |\n",
+    "| 1 | Попросить новых игроков пройти обучение. | Игроки совершают ход (бросок кубиков и использование хотя бы одной карты/действия) на основе полученного понимания. |\n",
+    "| 2 | Зафиксировать количество игроков, совершивших базовый ход. | 90% игроков должны совершить базовый ход без необходимости обращаться за помощшью. |\n",
     "\n",
-    "### TC-NFR-004: Устойчивость к изменению файлов сохранения\n",
+    "### TC-NFR-004: Устойчивость к изменению файлов настроек игры\n",
     "\n",
     "| Поле | Описание |\n",
     "|------|----------|\n",
     "| **ID** | TC-NFR-004 |\n",
     "| **Приоритет** | Высокий |\n",
-    "| **Назначение** | Проверка защиты игровых данных от несанкционированного изменения (читы). |\n",
+    "| **Назначение** | Проверка защиты игры от некорретных игровых настроек. |\n",
     "| **Тип** | Безопасность |\n",
     "| **Связь с требованиями** | НФТ-Б-001, НФТ-Б-002 |\n",
     "\n",
-    "**Предусловия:** Активная партия сохранена. Найден файл сохранения.\n",
+    "**Предусловия:** Закрытая игра.\n",
     "\n",
     "**Шаги выполнения:**\n",
     "\n",
     "| № | Действие | Ожидаемый результат |\n",
     "|---|----------|---------------------|\n",
-    "| 1 | Вручную изменить значение Монет в файле сохранения (например, увеличить с 5 до 999). | При попытке загрузки: игра должна либо отклонить/удалить измененный файл, либо загрузить его без изменения читерских значений (т.е., данные должны быть зашифрованы/хешированы). |\n",
-    "| 2 | Загрузить измененный файл. | Игра не должна вылетать из-за невалидных данных. |\n",
+    "| 1 | Вручную изменить значение в файле настроек на некоррекное. | При попытке загрузки: игра должна загрузить значения по умолчанию. |\n",
     "\n",
     "### TC-NFR-005: Тестирование длительной игры\n",
     "\n",
@@ -474,7 +473,7 @@
     "|------|----------|\n",
     "| **ID** | TC-NFR-005 |\n",
     "| **Приоритет** | Высокий |\n",
-    "| **Назначение** | Проверка на утечки памяти и стабильность при длительной работе. |\n",
+    "| **Назначение** | Проверка на стабильность при длительной работе. |\n",
     "| **Тип** | Производительность |\n",
     "| **Связь с требованиями** | НФТ-П-001 |\n",
     "\n",
@@ -520,21 +519,13 @@
     "*   Стабильная работа игры в течение 10 тестовых партий подряд (см. TC-NFR-005).\n",
     "*   Положительные оценки юзабилити от не менее 80% тестировщиков.\n",
     "*   FPS не опускается ниже 60 на целевых системах.\n",
-    "*   Отсутствуют блокирующие дефекты в системе баг-трекинга (YouGile/YouTrack).\n",
+    "*   Отсутствуют блокирующие дефекты в системе баг-трекинга (YouGile).\n",
     "\n",
     "# 5. ПРИЛОЖЕНИЯ\n",
     "\n",
     "## Приложение А. Тестовые данные\n",
     "\n",
-    "| ID | Тип | Описание | Значение | Применяется в ТК |\n",
-    "|----|-----|----------|----------|------------------|\n",
-    "| TD-001 | Фракция | Фракция игрока | «Златодержцы» | TC-GAME-001 |\n",
-    "| TD-002 | Фракция | Фракция оппонента | «Мародеры» | TC-GAME-001, TC-AI-001 |\n",
-    "| TD-003 | Ресурсы | Монеты для позитивного теста строительства | 10 Монет | TC-CARD-002 |\n",
-    "| TD-004 | Ресурсы | Монеты для негативного теста (недостаточно) | 5 Монет (при стоимости 10) | TC-CARD-003 |\n",
-    "| TD-005 | Карта | Карта здания (для проверки ФТ-004) | Стоимость 8 Монет, тип местности Поле | TC-CARD-002 |\n",
-    "| TD-006 | Кубик | Результат броска (для проверки ФТ-007) | Выпадение 6 | TC-RES-001 |\n",
-    "| TD-007 | Этажи Базы | Количество этажей (для теста захвата клетки) | 2 этажа | TC-BUILD-006 |"
+    "Тестовых данных нет"
    ]
   }
  ],
